--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@
 
 .subtitle {
 	font-size: 20px;
+	text-transform: uppercase;
 }
 .about {
 	font-size: 12px;
@@ -46,6 +47,11 @@
 	background: transparent;
 	}
                                /****** Секция 1 ********/
+.сontainer-section1 {
+	display: flex;
+	justify-content: space-between;
+}
+
 
 .portfolio-image {
 width: 308px;
@@ -56,7 +62,33 @@ height: 340px;
  	font-size: 12px;
  }
 .about-Me-container {
-	display: flex;
-	
+	display: flex; 
+} 
+.column1 {
+	flex: 50%;
 }
 
+.about {
+	max-width: 339px;
+}
+.row {
+	display: flex;
+}
+.column {
+	flex: 50%;
+}
+
+                              /****** Секция 2 ********/
+.container-section2 {
+	text-align: center;
+	background-color: #d1bac8;
+}
+
+/*.foto title {
+	text-align: center;
+}*/
+.links2 {
+	 display: flex;
+    justify-content: space-between;  
+    list-style-type: none; 
+}
