--- a/style.css
+++ b/style.css
@@ -1,14 +1,64 @@
                               /****** HEADER ******/
+@font-face {
+	src: url('fonts/PoppinsReg.ttf');
+	font-family: 'Popins'; 
+	font-weight: 400;
+}
+.body {
+	width: 1199px;
+}
+
 .header {
 	background-image: url("foto/fon_girl.jpg");
-	height: 714px;
 	background-repeat: no-repeat;
 	background-size: cover;
+	display: block;
+	height: 714px;
 }
 
 
 .title {
 	font-size: 20px;
+	text-transform: uppercase;
+	line-height: 1.18;
+	letter-spacing: 4.78px;
+	height: 39px;
+	width: 100px;
+	display: inline;
+	margin-top: 28px;
+	margin-left: 35px;
+	font-family: Poppins;
+	font-weight: 600;
+	font-style: normal;
+	font-stretch: normal;
+	/*text-align: left;*/
+	color: #000000;
+}
+
+.lin-about {
+	width: 52px;
+	height: 9px;
+	/*position: relative;
+	padding: 42px 243px 663px 904px;*/
+	display: flex;
+	flex: 50%;
+
+}
+
+.lin-works {
+	width: 55px;
+	height: 9px;
+	/*margin: 42px 243px 663px 904px;*/
+	display: flex;
+	flex: 50%;
+}
+
+.lin-contact {
+	width: 75px;
+	height: 9px;
+	/*margin: 42px 243px 663px 904px;*/
+	display: flex;
+	flex: 50%;
 }
 
 .menu-container {
@@ -18,10 +68,19 @@
 
 .links {
 	font-size: 12px;
+	text-transform: uppercase;
     display: flex;
     justify-content: space-between;
     width: 400px;  
     list-style-type: none; 
+	font-family: Poppins;
+	font-weight: 600;
+	font-style: normal;
+	font-stretch: normal;
+	line-height: 2.79;
+	letter-spacing: 2.87px;
+	text-align: left;
+	color: #000000;
 }
 
 .header-container {
@@ -31,10 +90,28 @@
 .subtitle {
 	font-size: 20px;
 	text-transform: uppercase;
+	font-weight: 600;
+	font-style: normal;
+	font-stretch: normal;
+	line-height: 0.93;
+	letter-spacing: 2px;
+	text-align: left;
+	color: #000000;
 }
+
 .about {
-	font-size: 12px;
 	margin: 10px 0 0 0;
+	  width: 399px;
+  height: 71px;
+  font-family: Poppins;
+  font-size: 12px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.58;
+  letter-spacing: 0.48px;
+  text-align: left;
+  color: #000000;
 }
 
 .button {
@@ -42,9 +119,13 @@
 	border: 2px solid #fff;
 	text-align: centr; 
 	font-size: 12px;
+	 width: 194px;
+  height: 42px;
 	border-radius: 20px;
 	padding: 16px 43px 16px 42px;
 	background: transparent;
+	text-transform: uppercase;
+	
 	}
                                /****** Секция 1 ********/
 .сontainer-section1 {
@@ -90,5 +171,5 @@ height: 340px;
 .links2 {
 	 display: flex;
     justify-content: space-between;  
-    list-style-type: none; 
+    list-style-type: none;  
 }
